# Students_new

./: Mylib.h  README.md  Stud.cpp  Stud.h  Students.cpp  Students.sln  Students.vcxproj  Students.vcxproj.filters  Util.cpp  Util.h
v2.0/: CMakeLists.txt  Doxyfile  run.bat
v2.0/docs/html/: _students__new_8cpp.html  annotated.html  class_student.html  class_timer-members.html  class_timer.html  classes.html  classperson-members.html  classperson.html  classstudent-members.html  classstudent.html  data__util_8cpp.html  data__util_8h.html  data__util_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  libs_8h.html  libs_8h_source.html  menudata.js  person_8h.html  person_8h_source.html  struct_directory__files-members.html  struct_directory__files.html  (+14 more)
v2.0/html/: class_person.html  classperson-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  functions_rela.html  functions_type.html  hierarchy.html  libs_8h_source.html  struct_file__info-members.html  struct_record-members.html  struct_record.html  struct_test__data.html  util_8h_source.html
v2.0/include/: libs.h  objects.h  person.h  student.h  timer.h
v2.0/src/: data_util.cpp
v2.0/tests/: test.cpp
(+202 files in other folders)
